--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/aos": "^3.0.7",
+    "aos": "3.0.0-beta.6",
     "embla-carousel": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "next": "14.2.15",
