--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "run-build": "npx serve@latest out"
+    "run-build": "npx serve@latest out",
+    "test": "playwright test"
   },
   "dependencies": {
     "@types/aos": "^3.0.7",
@@ -20,6 +21,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
