--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "test": "playwright test"
   },
   "dependencies": {
-    "@types/aos": "^3.0.7",
-    "aos": "3.0.0-beta.6",
     "embla-carousel": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.10",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-use-measure": "^2.1.1",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
